<resources>

    <string name="app_name">Scoreboard</string>

    <string name="minus1">-1</string>
    <string name="plus1">+1</string>
    <string name="minus10">-10</string>
    <string name="plus10">+10</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_number_of_players">How many players?</string>
    <string name="dialog_player_name_changing">Type new player name</string>

    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="menu_new_session">New Session</string>
    <string name="menu_save_session">Save Session</string>
    <string name="menu_reset_session">Reset Session</string>
    <string name="menu_player_name">Change Player Name</string>
    <string name="menu_player_color">Change Player Color</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
</resources>
