<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="com.braindead.scoreboard.ui.main.MainViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/button_table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/player_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/button_table"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{0}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{0}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{1}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{1}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{2}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{2}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{3}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{3}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{4}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{4}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{5}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{5}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{6}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{6}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{7}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{7}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{8}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{8}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_player_row"
                    bind:playerNumber="@{9}"
                    bind:mainViewModel="@{mainViewModel}" />

                <include
                    layout="@layout/fragment_scoreboard_calculator_row"
                    bind:playerNumber="@{9}"
                    bind:mainViewModel="@{mainViewModel}" />
            </TableLayout>
        </ScrollView>

        <TableLayout
            android:id="@+id/button_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#808080" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> mainViewModel.onChangeCurrentDelta(-1)}"
                    android:text="@string/minus1"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> mainViewModel.onChangeCurrentDelta(1)}"
                    android:text="@string/plus1"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> mainViewModel.onChangeCurrentDelta(-10)}"
                    android:text="@string/minus10"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> mainViewModel.onChangeCurrentDelta(10)}"
                    android:text="@string/plus10"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@{safeUnbox(mainViewModel.currentColor)}"
                    android:onClick="@{() -> mainViewModel.onChangeCurrentPlayerScore()}"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
    </android.support.constraint.ConstraintLayout>
</layout>