<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="scoreboardViewModel"
            type="com.braindead.scoreboard.viewmodel.ScoreboardViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/button_table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/player_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/button_table"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{0}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{0}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{1}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{1}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{2}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{2}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{3}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{3}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{4}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{4}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{5}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{5}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{6}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{6}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{7}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{7}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{8}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{8}"/>

                <include
                    layout="@layout/activity_scoreboard_player"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{9}"/>

                <include
                    layout="@layout/activity_scoreboard_partial_score"
                    bind:scoreboardViewModel="@{scoreboardViewModel}"
                    bind:playerNumber="@{9}"/>

            </TableLayout>

        </ScrollView>

        <TableLayout
            android:id="@+id/button_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@{safeUnbox(scoreboardViewModel.observableCurrentColor)}" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> scoreboardViewModel.onChangeCurrentDelta(-1)}"
                    android:text="@string/minus1"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> scoreboardViewModel.onChangeCurrentDelta(1)}"
                    android:text="@string/plus1"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> scoreboardViewModel.onChangeCurrentDelta(-10)}"
                    android:text="@string/minus10"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> scoreboardViewModel.onChangeCurrentDelta(10)}"
                    android:text="@string/plus10"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@{safeUnbox(scoreboardViewModel.observableCurrentColor)}"
                    android:onClick="@{() -> scoreboardViewModel.onChangeCurrentPlayerScore()}"
                    android:text="@string/ok"
                    android:textSize="20sp" />

            </TableRow>

        </TableLayout>

    </android.support.constraint.ConstraintLayout>

</layout>